--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <p>Contact me: <span id="email"></span></p>
 
-  <script>
+  vishnupriya.mohan@straive.com<script>
     const user = "vishnupriya";
     const domain = "straive.com";
     const email = user + "@" + domain;
