--- a/index.html
+++ b/index.html
@@ -1,21 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Vishnupriya's Portfolio</title>
+    <title>Vishnupriya's Portfolio</title>
 </head>
 <body>
-  <h1>Welcome to My Portfolio</h1>
-
-  <p>This is where I showcase my work. More details coming soon!</p>
-
-  <p>Contact me: <span id="email"></span></p>
-
-  vishnupriya.mohan@straive.com<script>
-    const user = "vishnupriya";
-    const domain = "straive.com";
-    const email = user + "@" + domain;
-    document.getElementById("email").innerHTML = '<a href="mailto:' + email + '">' + email + '</a>';
-  </script>
-
+    <h1>Welcome to My Portfolio</h1>
+    <p>This is where I showcase my work. More details coming soon!</p>
+    <p>Contact me: 
+    <!--email_off-->vishnupriya.mohan@straive.com<!--/email_off-->
+    </p>
 </body>
 </html>
